hotfix for NaN categories

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -84,145 +84,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>store_id</th>\n",
-       "      <th>store_primary_category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>168024</th>\n",
-       "      <td>6851</td>\n",
-       "      <td>seafood</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168042</th>\n",
-       "      <td>6851</td>\n",
-       "      <td>pizza</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168173</th>\n",
-       "      <td>6851</td>\n",
-       "      <td>greek</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        store_id store_primary_category\n",
-       "168024      6851                seafood\n",
-       "168042      6851                  pizza\n",
-       "168173      6851                  greek"
+       "store_id  store_primary_category\n",
+       "1         mexican                    8\n",
+       "2         japanese                   5\n",
+       "3         fast                       1\n",
+       "          salad                      2\n",
+       "4         asian                      1\n",
+       "                                    ..\n",
+       "6986      fast                      35\n",
+       "          indian                     1\n",
+       "          other                      1\n",
+       "          pasta                      1\n",
+       "6987      american                   2\n",
+       "Length: 15435, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "frame_test = historical_data[['store_id','store_primary_category']].drop_duplicates()\n",
-    "frame_test.loc[frame_test['store_id'] == 6851]"
+    "frame_test = historical_data[['store_id','store_primary_category']].groupby(by=['store_id','store_primary_category'],dropna=False).value_counts()\n",
+    "frame_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>store_primary_category</th>\n",
-       "      <th>store_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>american</td>\n",
-       "      <td>1845</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>mexican</td>\n",
-       "      <td>5477</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5477</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5477</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5477</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  store_primary_category  store_id\n",
-       "0               american      1845\n",
-       "1                mexican      5477\n",
-       "2                    NaN      5477\n",
-       "3                    NaN      5477\n",
-       "4                    NaN      5477"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "store_id_unique = historical_data[\"store_id\"].unique().tolist()\n",
+    "store_id_and_category = {store_id: historical_data[historical_data.store_id == store_id].store_primary_category.mode() \n",
+    "                         for store_id in store_id_unique}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill(store_id):\n",
+    "    \"\"\"Return primary store category from the dictionary\"\"\"\n",
+    "    try:\n",
+    "        return store_id_and_category[store_id].values[0]\n",
+    "    except:\n",
+    "        return np.nan\n",
+    "\n",
+    "# fill null values\n",
+    "historical_data[\"clean_store_primary_category\"] = historical_data.store_id.apply(fill)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## note that the number of non-null store_id values is less than the number of non-null \n",
     "# store_primary category values. We can probably fill in most of the missing values via inference\n",
@@ -232,9 +157,15 @@
     "# TODO #1 write function to downfill NaN store_primary_category values\n",
     "\n",
     "def fillNulls_store_category(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
+    "    store_id_list = historical_data['store_id'].unique().tolist()\n",
+    "    store_id_cat = {store_id: historical_data[historical_data.store_id == store_id].store_primary_category.mode() for store_id in store_id_list}\n",
+    "    historical_data['clean_store_primary_category']\n",
     "    try:\n",
-    "        store_id_list = historical_data['store_id'].unique().tolist()\n",
-    "        \n"
+    "        for x in store_id_list:\n",
+    "            historical_data['clean_store_primary_category'] = historical_data.store_id.apply(store_id_cat.values[0])\n",
+    "    except Exception as ee:\n",
+    "        raise ee\n",
+    "    return historical_data\n"
    ]
   },
   {
