added dummie function

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +201,26 @@
     "def addFeatures_ratios(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
     "        historical_data['busy_to_onshift'] = historical_data['total_busy_dashers'] / historical_data['total_onshift_dashers']\n",
+    "        # drop infinite values\n",
+    "        historical_data['busy_to_onshift'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return historical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## add dummies for categories\n",
+    "def addFeatures_dummies(historical_data:pd.DataFrame,dummy_column:str) -> pd.DataFrame:\n",
+    "    try:\n",
+    "        dumm = pd.get_dummies(historical_data[dummy_column],prefix=str(dummy_column + '_'),dtype=float)\n",
+    "        # concat dummies\n",
+    "        historical_data = pd.concat([historical_data,dumm],axis=1)\n",
+    "        historical_data = historical_data.drop(columns=[dummy_column])\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return historical_data"
