training dataset prep complete

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -84,39 +84,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "store_id  store_primary_category\n",
-       "1         mexican                    8\n",
-       "2         japanese                   5\n",
-       "3         fast                       1\n",
-       "          salad                      2\n",
-       "4         asian                      1\n",
-       "                                    ..\n",
-       "6986      fast                      35\n",
-       "          indian                     1\n",
-       "          other                      1\n",
-       "          pasta                      1\n",
-       "6987      american                   2\n",
-       "Length: 15435, dtype: int64"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frame_test = historical_data[['store_id','store_primary_category']].groupby(by=['store_id','store_primary_category'],dropna=False).value_counts()\n",
-    "frame_test"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [],
@@ -128,17 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fill(store_id):\n",
-    "    \"\"\"Return primary store category from the dictionary\"\"\"\n",
     "    try:\n",
     "        return store_id_and_category[store_id].values[0]\n",
     "    except:\n",
-    "        return np.nan\n",
-    "\n",
+    "        return np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# fill null values\n",
     "historical_data[\"clean_store_primary_category\"] = historical_data.store_id.apply(fill)"
    ]
@@ -170,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +197,262 @@
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return historical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## build the training dataset using the functions above\n",
+    "train_df = addFeatures_durations(historical_data=historical_data)\n",
+    "train_df = addFeatures_ratios(historical_data=train_df)\n",
+    "## add dummy columns for clean_store_primary_category, market_id, order_protocol\n",
+    "train_df = addFeatures_dummies(historical_data=train_df,dummy_column='clean_store_primary_category')\n",
+    "train_df = addFeatures_dummies(historical_data=train_df,dummy_column='market_id')\n",
+    "train_df = addFeatures_dummies(historical_data=train_df,dummy_column='order_protocol')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_items</th>\n",
+       "      <th>subtotal</th>\n",
+       "      <th>num_distinct_items</th>\n",
+       "      <th>min_item_price</th>\n",
+       "      <th>max_item_price</th>\n",
+       "      <th>total_onshift_dashers</th>\n",
+       "      <th>total_busy_dashers</th>\n",
+       "      <th>total_outstanding_orders</th>\n",
+       "      <th>estimated_order_place_duration</th>\n",
+       "      <th>estimated_store_to_consumer_driving_duration</th>\n",
+       "      <th>...</th>\n",
+       "      <th>market_id__4.0</th>\n",
+       "      <th>market_id__5.0</th>\n",
+       "      <th>market_id__6.0</th>\n",
+       "      <th>order_protocol__1.0</th>\n",
+       "      <th>order_protocol__2.0</th>\n",
+       "      <th>order_protocol__3.0</th>\n",
+       "      <th>order_protocol__4.0</th>\n",
+       "      <th>order_protocol__5.0</th>\n",
+       "      <th>order_protocol__6.0</th>\n",
+       "      <th>order_protocol__7.0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3441</td>\n",
+       "      <td>4</td>\n",
+       "      <td>557</td>\n",
+       "      <td>1239</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>446</td>\n",
+       "      <td>861.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>446</td>\n",
+       "      <td>690.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>446</td>\n",
+       "      <td>690.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6900</td>\n",
+       "      <td>5</td>\n",
+       "      <td>600</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>446</td>\n",
+       "      <td>289.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>1600</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>446</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 101 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total_items  subtotal  num_distinct_items  min_item_price  max_item_price  \\\n",
+       "0            4      3441                   4             557            1239   \n",
+       "1            1      1900                   1            1400            1400   \n",
+       "2            1      1900                   1            1900            1900   \n",
+       "3            6      6900                   5             600            1800   \n",
+       "4            3      3900                   3            1100            1600   \n",
+       "\n",
+       "   total_onshift_dashers  total_busy_dashers  total_outstanding_orders  \\\n",
+       "0                   33.0                14.0                      21.0   \n",
+       "1                    1.0                 2.0                       2.0   \n",
+       "2                    1.0                 0.0                       0.0   \n",
+       "3                    1.0                 1.0                       2.0   \n",
+       "4                    6.0                 6.0                       9.0   \n",
+       "\n",
+       "   estimated_order_place_duration  \\\n",
+       "0                             446   \n",
+       "1                             446   \n",
+       "2                             446   \n",
+       "3                             446   \n",
+       "4                             446   \n",
+       "\n",
+       "   estimated_store_to_consumer_driving_duration  ...  market_id__4.0  \\\n",
+       "0                                         861.0  ...             0.0   \n",
+       "1                                         690.0  ...             0.0   \n",
+       "2                                         690.0  ...             0.0   \n",
+       "3                                         289.0  ...             0.0   \n",
+       "4                                         650.0  ...             0.0   \n",
+       "\n",
+       "   market_id__5.0  market_id__6.0  order_protocol__1.0  order_protocol__2.0  \\\n",
+       "0             0.0             0.0                  1.0                  0.0   \n",
+       "1             0.0             0.0                  0.0                  1.0   \n",
+       "2             0.0             0.0                  1.0                  0.0   \n",
+       "3             0.0             0.0                  1.0                  0.0   \n",
+       "4             0.0             0.0                  1.0                  0.0   \n",
+       "\n",
+       "   order_protocol__3.0  order_protocol__4.0  order_protocol__5.0  \\\n",
+       "0                  0.0                  0.0                  0.0   \n",
+       "1                  0.0                  0.0                  0.0   \n",
+       "2                  0.0                  0.0                  0.0   \n",
+       "3                  0.0                  0.0                  0.0   \n",
+       "4                  0.0                  0.0                  0.0   \n",
+       "\n",
+       "   order_protocol__6.0  order_protocol__7.0  \n",
+       "0                  0.0                  0.0  \n",
+       "1                  0.0                  0.0  \n",
+       "2                  0.0                  0.0  \n",
+       "3                  0.0                  0.0  \n",
+       "4                  0.0                  0.0  \n",
+       "\n",
+       "[5 rows x 101 columns]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop the native 'store_primary_category' column and all remaining non-feature columns, then do a headcheck\n",
+    "train_df.drop(columns=['store_primary_category','created_at','actual_delivery_time','store_id'],inplace=True)\n",
+    "## drop NaN's\n",
+    "train_df.dropna(inplace=True)\n",
+    "train_df.head()"
    ]
   }
  ],
