PCA feature selection WIP

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -593,6 +593,36 @@
    "source": [
     "trim_train_df,vif_features = removeFeature_VIF(feature_frame=train_df,target_feature='actual_total_delivery_duration',vif_limit=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## feature selection/dimensionality reduction with PCA\n",
+    "##TODO #2 make a class for PCA\n",
+    "##TODO retain row numbers in scaler \n",
+    "\n",
+    "def build_train_test(dataset:pd.DataFrame,target_feature:str,test_size:int):\n",
+    "    try:\n",
+    "        X = dataset.drop(columns=target_feature)\n",
+    "        y = dataset[target_feature]\n",
+    "        x_train,x_test,y_train,y_test = train_test_split(X,y,test_size=test_size,random_state=42)\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return x_train,x_test,y_train,y_test\n",
+    "\n",
+    "def apply_standard_scaler(train,test):\n",
+    "    try:\n",
+    "        scaler = StandardScaler()\n",
+    "        scaler.fit(train)\n",
+    "        train_stdScale = scaler.transform(train)\n",
+    "        test_stdScale = scaler.transform(test)\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return train_stdScale,test_stdScale"
+   ]
   }
  ],
  "metadata": {
