--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,46 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 197428 entries, 0 to 197427\n",
-      "Data columns (total 16 columns):\n",
-      " #   Column                                        Non-Null Count   Dtype  \n",
-      "---  ------                                        --------------   -----  \n",
-      " 0   market_id                                     196441 non-null  float64\n",
-      " 1   created_at                                    197428 non-null  object \n",
-      " 2   actual_delivery_time                          197421 non-null  object \n",
-      " 3   store_id                                      197428 non-null  int64  \n",
-      " 4   store_primary_category                        192668 non-null  object \n",
-      " 5   order_protocol                                196433 non-null  float64\n",
-      " 6   total_items                                   197428 non-null  int64  \n",
-      " 7   subtotal                                      197428 non-null  int64  \n",
-      " 8   num_distinct_items                            197428 non-null  int64  \n",
-      " 9   min_item_price                                197428 non-null  int64  \n",
-      " 10  max_item_price                                197428 non-null  int64  \n",
-      " 11  total_onshift_dashers                         181166 non-null  float64\n",
-      " 12  total_busy_dashers                            181166 non-null  float64\n",
-      " 13  total_outstanding_orders                      181166 non-null  float64\n",
-      " 14  estimated_order_place_duration                197428 non-null  int64  \n",
-      " 15  estimated_store_to_consumer_driving_duration  196902 non-null  float64\n",
-      "dtypes: float64(6), int64(7), object(3)\n",
-      "memory usage: 24.1+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "historical_data.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +408,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,29 +557,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "## feature selection/dimensionality reduction with PCA\n",
     "##TODO #2 make a class for PCA\n",
-    "##TODO retain row numbers in scaler \n",
+    "##TODO retain row numbers in scaler --DONE\n",
     "\n",
     "def build_train_test(dataset:pd.DataFrame,target_feature:str,test_size:int):\n",
     "    try:\n",
     "        X = dataset.drop(columns=target_feature)\n",
     "        y = dataset[target_feature]\n",
     "        x_train,x_test,y_train,y_test = train_test_split(X,y,test_size=test_size,random_state=42)\n",
+    "        x_train,x_test = pd.DataFrame(x_train),pd.DataFrame(x_test)\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return x_train,x_test,y_train,y_test\n",
     "\n",
     "def apply_standard_scaler(train,test):\n",
+    "    scaler = StandardScaler()\n",
     "    try:\n",
-    "        scaler = StandardScaler()\n",
-    "        scaler.fit(train)\n",
-    "        train_stdScale = scaler.transform(train)\n",
-    "        test_stdScale = scaler.transform(test)\n",
+    "        if type(train) == pd.DataFrame and type(test) == pd.DataFrame:\n",
+    "            scaler.fit(train.values)\n",
+    "            train_stdScale = scaler.transform(train.values)\n",
+    "            test_stdScale = scaler.transform(test.values)\n",
+    "            train_stdScale = pd.DataFrame(train_stdScale,index=train.index,columns=train.columns)\n",
+    "            test_stdScale = pd.DataFrame(test_stdScale,index=test.index,columns=test.columns)\n",
+    "        else:\n",
+    "            scaler.fit(train)\n",
+    "            train_stdScale = scaler.transform(train)\n",
+    "            test_stdScale = scaler.transform(test)\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return train_stdScale,test_stdScale"
