--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -563,7 +563,7 @@
    "source": [
     "## feature selection/dimensionality reduction with PCA\n",
     "##TODO #2 make a class for PCA\n",
-    "##TODO retain row numbers in scaler --DONE\n",
+    "##TODO #3 retain row numbers in scaler --DONE\n",
     "\n",
     "def build_train_test(dataset:pd.DataFrame,target_feature:str,test_size:int):\n",
     "    try:\n",
@@ -591,6 +591,181 @@
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return train_stdScale,test_stdScale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_test,y_train,y_test = build_train_test(dataset=train_df,target_feature='actual_total_delivery_duration',test_size=0.3)\n",
+    "x_train_stdScale,x_test_stdScale = apply_standard_scaler(train=x_train,test=x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=5)\n",
+    "pca.fit(x_train_stdScale)\n",
+    "x_train_pca,x_test_pca = pca.transform(x_train_stdScale),pca.transform(x_test_stdScale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>total_items</th>\n",
+       "      <td>0.063517</td>\n",
+       "      <td>0.225600</td>\n",
+       "      <td>0.501059</td>\n",
+       "      <td>0.002689</td>\n",
+       "      <td>-0.025891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>subtotal</th>\n",
+       "      <td>0.129040</td>\n",
+       "      <td>0.371908</td>\n",
+       "      <td>0.255968</td>\n",
+       "      <td>0.302224</td>\n",
+       "      <td>-0.011539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>num_distinct_items</th>\n",
+       "      <td>0.085217</td>\n",
+       "      <td>0.282273</td>\n",
+       "      <td>0.481448</td>\n",
+       "      <td>0.050227</td>\n",
+       "      <td>-0.041236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min_item_price</th>\n",
+       "      <td>0.018228</td>\n",
+       "      <td>0.040210</td>\n",
+       "      <td>-0.394716</td>\n",
+       "      <td>0.290872</td>\n",
+       "      <td>0.064707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max_item_price</th>\n",
+       "      <td>0.098351</td>\n",
+       "      <td>0.269828</td>\n",
+       "      <td>-0.172558</td>\n",
+       "      <td>0.404866</td>\n",
+       "      <td>0.042475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_protocol__3.0</th>\n",
+       "      <td>0.125485</td>\n",
+       "      <td>-0.085049</td>\n",
+       "      <td>0.046624</td>\n",
+       "      <td>0.248677</td>\n",
+       "      <td>-0.213428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_protocol__4.0</th>\n",
+       "      <td>-0.087705</td>\n",
+       "      <td>-0.174628</td>\n",
+       "      <td>0.204635</td>\n",
+       "      <td>-0.249651</td>\n",
+       "      <td>0.101494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_protocol__5.0</th>\n",
+       "      <td>0.110770</td>\n",
+       "      <td>-0.151046</td>\n",
+       "      <td>-0.033117</td>\n",
+       "      <td>0.061384</td>\n",
+       "      <td>0.048104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_protocol__6.0</th>\n",
+       "      <td>-0.020250</td>\n",
+       "      <td>0.013661</td>\n",
+       "      <td>-0.026149</td>\n",
+       "      <td>-0.013045</td>\n",
+       "      <td>0.013610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_protocol__7.0</th>\n",
+       "      <td>-0.005099</td>\n",
+       "      <td>-0.007384</td>\n",
+       "      <td>0.002585</td>\n",
+       "      <td>0.012886</td>\n",
+       "      <td>0.010062</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>102 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            0         1         2         3         4\n",
+       "total_items          0.063517  0.225600  0.501059  0.002689 -0.025891\n",
+       "subtotal             0.129040  0.371908  0.255968  0.302224 -0.011539\n",
+       "num_distinct_items   0.085217  0.282273  0.481448  0.050227 -0.041236\n",
+       "min_item_price       0.018228  0.040210 -0.394716  0.290872  0.064707\n",
+       "max_item_price       0.098351  0.269828 -0.172558  0.404866  0.042475\n",
+       "...                       ...       ...       ...       ...       ...\n",
+       "order_protocol__3.0  0.125485 -0.085049  0.046624  0.248677 -0.213428\n",
+       "order_protocol__4.0 -0.087705 -0.174628  0.204635 -0.249651  0.101494\n",
+       "order_protocol__5.0  0.110770 -0.151046 -0.033117  0.061384  0.048104\n",
+       "order_protocol__6.0 -0.020250  0.013661 -0.026149 -0.013045  0.013610\n",
+       "order_protocol__7.0 -0.005099 -0.007384  0.002585  0.012886  0.010062\n",
+       "\n",
+       "[102 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lerd = pd.DataFrame(pca.components_.T,index=x_train_stdScale.columns)\n",
+    "lerd"
    ]
   }
  ],
