PCA dimensionality reduction function

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -620,146 +620,152 @@
     "        feature_to_component_ratio = len(components)/x_train.shape[1]\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
-    "    return components,feature_to_component_ratio"
+    "    return components,feature_to_component_ratio\n",
+    "\n",
+    "def PCAcalc_dim_reduction(x_train,x_test,desired_components:int):\n",
+    "## you know, dimensionality reduction\n",
+    "    pca = PCA(n_components=desired_components)\n",
+    "    x_train_scaled,x_test_scaled = apply_standard_scaler(x_train),apply_standard_scaler(x_test)\n",
+    "    try:\n",
+    "        pca = pca.fit(x_train_scaled)\n",
+    "        x_train_pca,x_test_pca = pca.transform(x_train_stdScale),pca.transform(x_test_stdScale)\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return x_train_pca,x_test_pca"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "103"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_df.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = PCA()\n",
+    "pca = PCA() \n",
     "pca.fit(x_train_stdScale)\n",
     "x_train_pca,x_test_pca = pca.transform(x_train_stdScale),pca.transform(x_test_stdScale)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>exp_var</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>total_items</th>\n",
-       "      <td>4.172818e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subtotal</th>\n",
-       "      <td>2.777269e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>num_distinct_items</th>\n",
-       "      <td>2.666235e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min_item_price</th>\n",
-       "      <td>2.058501e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max_item_price</th>\n",
-       "      <td>1.862902e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>order_protocol__3.0</th>\n",
-       "      <td>3.457178e-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>order_protocol__4.0</th>\n",
-       "      <td>2.386228e-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>order_protocol__5.0</th>\n",
-       "      <td>4.250911e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>order_protocol__6.0</th>\n",
-       "      <td>3.192477e-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>order_protocol__7.0</th>\n",
-       "      <td>1.722862e-18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>102 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                          exp_var\n",
-       "total_items          4.172818e-02\n",
-       "subtotal             2.777269e-02\n",
-       "num_distinct_items   2.666235e-02\n",
-       "min_item_price       2.058501e-02\n",
-       "max_item_price       1.862902e-02\n",
-       "...                           ...\n",
-       "order_protocol__3.0  3.457178e-05\n",
-       "order_protocol__4.0  2.386228e-15\n",
-       "order_protocol__5.0  4.250911e-17\n",
-       "order_protocol__6.0  3.192477e-18\n",
-       "order_protocol__7.0  1.722862e-18\n",
-       "\n",
-       "[102 rows x 1 columns]"
+       "[7,\n",
+       " 95,\n",
+       " 0,\n",
+       " 4,\n",
+       " 9,\n",
+       " 13,\n",
+       " 92,\n",
+       " 99,\n",
+       " 98,\n",
+       " 96,\n",
+       " 89,\n",
+       " 91,\n",
+       " 100,\n",
+       " 66,\n",
+       " 62,\n",
+       " 19,\n",
+       " 39,\n",
+       " 28,\n",
+       " 35,\n",
+       " 84,\n",
+       " 54,\n",
+       " 84,\n",
+       " 73,\n",
+       " 55,\n",
+       " 94,\n",
+       " 22,\n",
+       " 73,\n",
+       " 21,\n",
+       " 30,\n",
+       " 75,\n",
+       " 49,\n",
+       " 22,\n",
+       " 77,\n",
+       " 17,\n",
+       " 27,\n",
+       " 50,\n",
+       " 81,\n",
+       " 40,\n",
+       " 87,\n",
+       " 81,\n",
+       " 87,\n",
+       " 69,\n",
+       " 45,\n",
+       " 31,\n",
+       " 38,\n",
+       " 58,\n",
+       " 44,\n",
+       " 29,\n",
+       " 70,\n",
+       " 67,\n",
+       " 70,\n",
+       " 86,\n",
+       " 26,\n",
+       " 41,\n",
+       " 41,\n",
+       " 59,\n",
+       " 15,\n",
+       " 20,\n",
+       " 47,\n",
+       " 78,\n",
+       " 53,\n",
+       " 64,\n",
+       " 80,\n",
+       " 76,\n",
+       " 42,\n",
+       " 72,\n",
+       " 23,\n",
+       " 34,\n",
+       " 16,\n",
+       " 16,\n",
+       " 48,\n",
+       " 85,\n",
+       " 32,\n",
+       " 94,\n",
+       " 82,\n",
+       " 55,\n",
+       " 101,\n",
+       " 101,\n",
+       " 91,\n",
+       " 100,\n",
+       " 93,\n",
+       " 51,\n",
+       " 99,\n",
+       " 3,\n",
+       " 96,\n",
+       " 12,\n",
+       " 92,\n",
+       " 98,\n",
+       " 3,\n",
+       " 13,\n",
+       " 0,\n",
+       " 2,\n",
+       " 8,\n",
+       " 5,\n",
+       " 6,\n",
+       " 90,\n",
+       " 19,\n",
+       " 90,\n",
+       " 52,\n",
+       " 10,\n",
+       " 36,\n",
+       " 18]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp_var = pd.DataFrame(data=pca.explained_variance_ratio_.T,index=x_train_stdScale.columns,columns=['exp_var'])\n",
-    "exp_var = exp_var.sort_values(by=['exp_var'],ascending=False)\n",
-    "## exp_var['run_sum'] = np.cumsum(exp_var['exp_var'])\n",
-    "exp_var"
+    "n_comp = pca.components_.shape[0]\n",
+    "important_feature = [np.abs(pca.components_[i]).argmax() for i in range(n_comp)]\n",
+    "important_feature\n"
    ]
   }
  ],
