cleanup in PCAcalc_dim_reduction

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -594,16 +594,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train,x_test,y_train,y_test = build_train_test(dataset=train_df,target_feature='actual_total_delivery_duration',test_size=0.3)\n",
-    "x_train_stdScale,x_test_stdScale = apply_standard_scaler(train=x_train,test=x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -628,7 +618,7 @@
     "    x_train_scaled,x_test_scaled = apply_standard_scaler(x_train),apply_standard_scaler(x_test)\n",
     "    try:\n",
     "        pca = pca.fit(x_train_scaled)\n",
-    "        x_train_pca,x_test_pca = pca.transform(x_train_stdScale),pca.transform(x_test_stdScale)\n",
+    "        x_train_pca,x_test_pca = pca.transform(x_train_scaled),pca.transform(x_test_scaled)\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return x_train_pca,x_test_pca"
